# recipe-order

./: .env.template  .filter.rclone.txt  .gitignore  pyproject.toml
recipe_order/: __main__.py
recipe_order/infer/: __init__.py
recipe_order/network/graph/: model.py
recipe_order/network/perm/: __init__.py  data.py  metrics.py  model.py
recipe_order/network/pointer/: __init__.py  data.py  metrics.py  model.py
recipe_order/shared/: abc.py  console.py  constant.py  env.py  graph.py  traindata.py
recipe_order/utils/: abc.py  baroque.py  functional.py  metrics.py  stub.py
scripts/: temp.playground.ipynb
scripts/mmres/: __init__.py  draw.py
scripts/xiachufang/: temp.xiachufang.ipynb
